objects/Registration_Settings__c.object
<CustomObject>
    <fields>
        <fullName>EventRegistration__c</fullName>
        <label>Event_Registration_jun</label>
        <referenceTo>Event_Registration_jun__c</referenceTo>
        <relationshipLabel>Registration_Settings</relationshipLabel>
        <relationshipName>Registration_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Registration_Settings</relationshipLabel>
        <relationshipName>Registration_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Company_Description_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Company_Description_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Company_Description_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Company_Description_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Company_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Company_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Company_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Company_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Designation_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Designation_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Designation_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Designation_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Email_Include_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_Email_Include__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Email_Required_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_Email_Required__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FirstName_Include__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_FirstName_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FirstName_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_FirstName_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Homeaddress_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Homeaddress_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Homeaddress_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Homeaddress_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Keywords_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Keywords_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Keywords_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Keywords_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LastName_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_LastName_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LastName_include__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_LastName_include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mobile_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Mobile_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mobile_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Mobile_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NAICS_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_NAICS_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NAICS_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_NAICS_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Shipadd_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Shipadd_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Shipadd_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Shipadd_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wesite_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Wesite_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wesite_include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Wesite_include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WorkPhone_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_WorkPhone_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Workaddress_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Workaddress_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Workaddress_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Workaddress_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_workphone_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_workphone_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <label>TicketTypes</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>Registration_Settings</relationshipLabel>
        <relationshipName>Registration_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Registration Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Registration Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration_Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>